Resolves: tdf#101003 don't give paras in editeng accessible names

change since...

commit c23ab5eaed57cc3fb5860e26c591c73c5b22687b
Author: Steve Yin <steve_y@apache.org>
Date:   Tue Nov 26 14:25:22 2013 +0000

    Integrate branch of IAccessible2

keep the accessible description, but drop thea accessible name which
is reportedly an undesirable change.

Change-Id: I8f9c53ef967c4e566fde1829832aa035efce4f23